--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -69,8 +69,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3865a15c-e239-41ce-a8d8-8ffaeb2e6145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# array shapes() \n",
+    "arr = np.array([[11,12,13,14,15],[22,23,24,25,26]])\n",
+    "sh = arr.shape\n",
+    "print(sh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cef9bd40-f3ef-415e-8c7f-93197064f73f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "print(arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7780d67e-e5e0-4789-a1cd-b927e0ee662e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917af16c-55de-4e6d-ae42-aa58ec0dee60",
    "metadata": {},
    "outputs": [],
    "source": []
