--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -110,8 +110,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7780d67e-e5e0-4789-a1cd-b927e0ee662e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6  7  8  9 10]\n",
+      " [11 12 13 14 15 16 17 18 19 20]]\n",
+      "[[[ 1  2  3  4  5]\n",
+      "  [ 6  7  8  9 10]]\n",
+      "\n",
+      " [[11 12 13 14 15]\n",
+      "  [16 17 18 19 20]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#arr = np.array(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
+    "# reshape from  1D to 2D\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20])\n",
+    "newarr2 = arr.reshape(2,10)\n",
+    "# reshape from 1D to 3D\n",
+    "newarr3 = arr.reshape(2,2,5)\n",
+    "print(newarr)\n",
+    "print(newarr3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917af16c-55de-4e6d-ae42-aa58ec0dee60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "917af16c-55de-4e6d-ae42-aa58ec0dee60",
+   "id": "0837a94e-b957-41ae-86cf-132080dd1dc0",
    "metadata": {},
    "outputs": [],
    "source": []
