--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -24,11 +24,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "420f5a7c-5508-44b2-84c1-fbc4a526910c",
+   "cell_type": "raw",
+   "id": "93445780-31df-4945-97f2-557c30d1f6b0",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# copying and array into another one \n",
     "\n",
@@ -40,21 +38,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "200f3252-ae1b-4fe4-afea-0efc545ac343",
+   "cell_type": "raw",
+   "id": "eb19ec40-d20b-484d-9583-19a34ca9d9b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[45  4  5  6  7  8  9 10 11 20 24]\n",
-      "[45  4  5  6  7  8  9 10 11 20 24]\n",
-      "[56  4  5  6  7  8  9 10 11 20 24]\n"
-     ]
-    }
-   ],
    "source": [
     "# view() and copy() methods\n",
     "arr = np.array([2,4,5,6,7,8,9,10,11,20,24])\n",
@@ -109,25 +95,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "7780d67e-e5e0-4789-a1cd-b927e0ee662e",
+   "cell_type": "raw",
+   "id": "2e82af7e-6e5f-4304-ac41-1357d59c6358",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  2  3  4  5  6  7  8  9 10]\n",
-      " [11 12 13 14 15 16 17 18 19 20]]\n",
-      "[[[ 1  2  3  4  5]\n",
-      "  [ 6  7  8  9 10]]\n",
-      "\n",
-      " [[11 12 13 14 15]\n",
-      "  [16 17 18 19 20]]]\n"
-     ]
-    }
-   ],
    "source": [
     "#arr = np.array(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
     "# reshape from  1D to 2D\n",
@@ -140,17 +110,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "917af16c-55de-4e6d-ae42-aa58ec0dee60",
+   "cell_type": "raw",
+   "id": "9221b808-baa2-4541-af39-bfcb987144c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# numpy itaration\n",
+    "# normal itaration or 1 D\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "for i in  arr :\n",
+    " print()\n",
+    "# 2 D itaration     \n",
+    "arr2D = arr.reshape(2,5)\n",
+    "for i in arr2D : # vector converstion\n",
+    "    for e in i : # vector looping \n",
+    "     print(e)\n",
+    " \n",
+    "#print(arr)\n",
+    "print(arr2D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0837a94e-b957-41ae-86cf-132080dd1dc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3  4]\n",
+      "  [ 5  6  7  8]]\n",
+      "\n",
+      " [[ 9 10 11 12]\n",
+      "  [13 14 15 16]]]\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16])\n",
+    "arr3D = arr.reshape(2,2,4)\n",
+    "print(arr3D)\n",
+    "for i in np.nditer(arr3D):\n",
+    " print(i)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0837a94e-b957-41ae-86cf-132080dd1dc0",
+   "id": "49b5c140-9544-4b51-994a-3c71a7e53ffe",
    "metadata": {},
    "outputs": [],
    "source": []
