--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -130,39 +130,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "0837a94e-b957-41ae-86cf-132080dd1dc0",
+   "cell_type": "raw",
+   "id": "ee3f101a-a9ba-4124-b5d7-ee8305ab4c39",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 1  2  3  4]\n",
-      "  [ 5  6  7  8]]\n",
-      "\n",
-      " [[ 9 10 11 12]\n",
-      "  [13 14 15 16]]]\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n"
-     ]
-    }
-   ],
    "source": [
     "import numpy as np\n",
     "arr = np.array([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16])\n",
@@ -174,8 +144,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "49b5c140-9544-4b51-994a-3c71a7e53ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# joining arrays with the concatenate method \n",
+    "arr1 = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "arr2 = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "arr7 = np.array([10,11,12,13,14,15])\n",
+    "arr4 = np.array([20,21,22,23,24,25])\n",
+    "arr3 = np.concatenate((arr1 ,arr2,arr4))\n",
+    "arr5 = np.hstack((arr1,arr2))\n",
+    "print(arr5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7e49221-f9bc-4acb-93b1-9cd2c5076758",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26660c29-d45b-43fc-a223-22bd9c9560ef",
    "metadata": {},
    "outputs": [],
    "source": []
