--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -143,19 +143,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "49b5c140-9544-4b51-994a-3c71a7e53ffe",
+   "cell_type": "raw",
+   "id": "6a11253b-d70c-4083-a0f1-64e61430b317",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5 6 7 8 9 1 2 3 4 5 6 7 8 9]\n"
-     ]
-    }
-   ],
    "source": [
     "import numpy as np\n",
     "# joining arrays with the concatenate method \n",
@@ -170,16 +160,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "d7e49221-f9bc-4acb-93b1-9cd2c5076758",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1, 2, 3, 4, 5]), array([6, 7, 8, 9])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "arr2 = np.array_split(arr ,2)\n",
+    "print(arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "26660c29-d45b-43fc-a223-22bd9c9560ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6  7  8  9 10]\n",
+      " [11 12 13 14 15 16 17 18 19 20]]\n",
+      "[array([[ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]]), array([[11, 12, 13, 14, 15, 16, 17, 18, 19, 20]]), array([], shape=(0, 10), dtype=int64), array([], shape=(0, 10), dtype=int64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2D splitting \n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]) \n",
+    "\n",
+    "# converting the 1 D into a 2 D\n",
+    "arr2d = arr.reshape(2,10)\n",
+    "print(arr2d)\n",
+    "# spitting the 2 D into sub arrays \n",
+    "arr3 = np.array_split(arr2d , 4)\n",
+    "print(arr3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26660c29-d45b-43fc-a223-22bd9c9560ef",
+   "id": "2ffc9787-6c05-4fa6-8cde-27dcc069704a",
    "metadata": {},
    "outputs": [],
    "source": []
