--- a/numpy_random.ipynb
+++ b/numpy_random.ipynb
@@ -52,7 +52,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "9735a8a3-efc8-466f-aee2-6e0de593516e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
