--- a/section1-4.ipynb
+++ b/section1-4.ipynb
@@ -53,7 +53,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "4340c735-4395-44b4-8025-68838305d619",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
