prod and sum rules

--- a/numpy_math.ipynb
+++ b/numpy_math.ipynb
@@ -10,6 +10,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "3c3bdfd4-b87d-4f19-bcd6-59e58276deca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[40 98 67 63 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "from numpy import random \n",
+    "arr1 = random.randint(100 , size=5)\n",
+    "print(arr1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "831e2ac0-39b0-423d-a6e6-fdcb3afd86e2",
    "metadata": {},
@@ -61,32 +82,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c3bdfd4-b87d-4f19-bcd6-59e58276deca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2cea0225-91cf-45a5-8fe5-93700e797f65",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[96 25 58 98 83]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr2 = random.randint(100, size=5)\n",
+    "print(arr2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ab8add92-ad10-41c0-8faa-f48108c63763",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "449630811592704000\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr3 = np.prod([arr1,arr2])\n",
+    "print(arr3)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3305dea9-aa4e-4aa6-91ec-f3c4e5f677b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sum of an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6c60f065-17ce-400c-8ec3-53f98dd43b79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19 33 86 87 85 55 64 88 29 20]\n",
+      "[29 95 28 24 84 79 18 94 36 71]\n",
+      "1124\n"
+     ]
+    }
+   ],
+   "source": [
+    "# array 1 generation\n",
+    "array1 = random.randint(100 , size=10)\n",
+    "print(array1)\n",
+    "# array 2 generation\n",
+    "array2 = random.randint(100 , size= 10)\n",
+    "print(array2)\n",
+    "# array sum \n",
+    "print(np.sum([array1,array2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86f622f0-d74c-42a6-9c1d-2b134654d983",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b058e6ee-8305-4c44-b3d7-e4b29a748cbb",
    "metadata": {},
    "outputs": [],
    "source": []
