--- a/numpy_math.ipynb
+++ b/numpy_math.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "6c60f065-17ce-400c-8ec3-53f98dd43b79",
    "metadata": {},
    "outputs": [
@@ -138,9 +138,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19 33 86 87 85 55 64 88 29 20]\n",
-      "[29 95 28 24 84 79 18 94 36 71]\n",
-      "1124\n"
+      "[68 36 99 24 42 93 29 97 29 22]\n",
+      "[21 33 66 33 44 11 85 82 97 63]\n",
+      "1074\n"
      ]
     }
    ],
@@ -157,16 +157,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "86f622f0-d74c-42a6-9c1d-2b134654d983",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# difference \n",
+    "array1 = random.randint(100 , size = 5)\n",
+    "array2 = random.randint(100 , size = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b058e6ee-8305-4c44-b3d7-e4b29a748cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 19  -3  -6 -22  -3  55 -20   4 -54  -1  10  19  23  16 -62   1  57   6\n",
+      " -58] [ 15  -5   0 -75  50 -54  -3  18  -1  74 -48  17 -16  49 -39  35 -55  56\n",
+      " -12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.diff(array1) ,np.diff(array2))\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b058e6ee-8305-4c44-b3d7-e4b29a748cbb",
+   "id": "fdec88c9-4b84-45ca-ba51-890ba2d3e061",
    "metadata": {},
    "outputs": [],
    "source": []
