pandas , numpy and series

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -49,11 +49,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6bac50aa-d621-4369-9c22-679fe9d78485",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     37\n",
+      "1     21\n",
+      "2     69\n",
+      "3     95\n",
+      "4     28\n",
+      "5      4\n",
+      "6     39\n",
+      "7     75\n",
+      "8     47\n",
+      "9     35\n",
+      "10    36\n",
+      "11    66\n",
+      "12    36\n",
+      "13    64\n",
+      "14    13\n",
+      "15    92\n",
+      "16     1\n",
+      "17    17\n",
+      "18    53\n",
+      "19    38\n",
+      "dtype: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "#series \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from numpy import random \n",
+    "# 1 D array generation \n",
+    "array1 = random.randint(100 , size = 20)\n",
+    "print(pd.Series(array1))"
+   ]
   },
   {
    "cell_type": "code",
