--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -93,8 +93,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d8c5d03d-8826-4b16-b0c7-c7732ac2930b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15  9 12 19 12]\n",
+      " [19  7 15 12 18]]\n",
+      "    0  1   2   3   4\n",
+      "0  15  9  12  19  12\n",
+      "1  19  7  15  12  18\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "from numpy import random \n",
+    "\n",
+    "dataset = random.randint(20 , size=(2,5))\n",
+    "print(dataset)\n",
+    "print(pd.DataFrame(dataset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f12712cf-c032-4678-bb69-661709a8f804",
    "metadata": {},
    "outputs": [],
    "source": []
