--- a/Student_performance/Student_performance.ipynb
+++ b/Student_performance/Student_performance.ipynb
@@ -3,7 +3,125 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60dfe9eb-77c4-4646-a8bb-394fadbe91ae",
+   "id": "2aaf03e2-95f6-4254-ae72-71f071563df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task one \n",
+    "import pandas as pd \n",
+    "# loading csv \n",
+    "students_df = pd.read_csv('student_performance.csv')\n",
+    "# converting csv into DataFrame\n",
+    "student_data = pd.DataFrame(students_df) \n",
+    "print(student_data)\n",
+    "# getting top 5 elements \n",
+    "print(student_data.head(5))\n",
+    "# checking datatypes \n",
+    "print(student_data.info())\n",
+    "# counting  missing values per column \n",
+    "print(student_data.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "14fb3ffa-ddb4-4a60-94ce-11aba9554529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   student_id  math    science  english  attendance\n",
+      "0        S001  78.0  82.000000     75.0          92\n",
+      "1        S002  85.0  88.000000     90.0          96\n",
+      "2        S003  62.0  70.000000     65.0          80\n",
+      "3        S004  90.0  92.000000     94.0          98\n",
+      "4        S005  55.0  60.000000     58.0          70\n",
+      "5        S006  88.0  85.000000     87.0          95\n",
+      "6        S007  72.0  75.000000     70.0          85\n",
+      "7        S008  95.0  94.000000     96.0          99\n",
+      "8        S009  67.0  65.000000     60.0          78\n",
+      "9        S010  80.0  82.000000     79.0          90\n",
+      "10       S011  74.0  76.000000     72.0          88\n",
+      "11       S012  91.0  89.000000     93.0          97\n",
+      "12       S013  59.0  63.000000     61.0          75\n",
+      "13       S014  83.0  85.000000     84.0          92\n",
+      "14       S015  69.0  68.000000     70.0          82\n",
+      "15       S016  87.0  90.000000     88.0          94\n",
+      "16       S017  76.0  78.000000     74.0          86\n",
+      "17       S018  92.0  95.000000     91.0          98\n",
+      "18       S019  64.0  66.000000     62.0          79\n",
+      "19       S020  81.0  83.000000     80.0          91\n",
+      "20       S021  77.5  72.000000     68.0          84\n",
+      "21       S022  77.0  78.958333     75.0          89\n",
+      "22       S023  85.0  88.000000     76.5          93\n",
+      "23       S024  60.0  58.000000     55.0          72\n",
+      "24       S025  90.0  91.000000     89.0          96\n",
+      "    student_id   math  science  english  attendance\n",
+      "0        False  False    False    False       False\n",
+      "1        False  False    False    False       False\n",
+      "2        False  False    False    False       False\n",
+      "3        False  False    False    False       False\n",
+      "4        False  False    False    False       False\n",
+      "5        False  False    False    False       False\n",
+      "6        False  False    False    False       False\n",
+      "7        False  False    False    False       False\n",
+      "8        False  False    False    False       False\n",
+      "9        False  False    False    False       False\n",
+      "10       False  False    False    False       False\n",
+      "11       False  False    False    False       False\n",
+      "12       False  False    False    False       False\n",
+      "13       False  False    False    False       False\n",
+      "14       False  False    False    False       False\n",
+      "15       False  False    False    False       False\n",
+      "16       False  False    False    False       False\n",
+      "17       False  False    False    False       False\n",
+      "18       False  False    False    False       False\n",
+      "19       False  False    False    False       False\n",
+      "20       False  False    False    False       False\n",
+      "21       False  False    False    False       False\n",
+      "22       False  False    False    False       False\n",
+      "23       False  False    False    False       False\n",
+      "24       False  False    False    False       False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# task two \n",
+    "# finging  empty cells in columns\n",
+    "mean_math = student_data['math'].mean()\n",
+    "mean_english = student_data['english'].mean()\n",
+    "mean_science = student_data['science'].mean()\n",
+    "# filling emty cells with the mean values\n",
+    "student_data['math'] = student_data['math'].fillna(mean_math)\n",
+    "student_data['english'] = student_data['english'].fillna(mean_english)\n",
+    "student_data['science'] = student_data['science'].fillna(mean_science)\n",
+    "print(student_data)\n",
+    "# checking for empty cells \n",
+    "print(student_data.isna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68bf8be1-0250-44d9-898c-c60969e1f5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "453bac03-688c-49e1-944d-a1cb870a0347",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b1dca0-145b-4482-b060-ec2957a6450f",
    "metadata": {},
    "outputs": [],
    "source": []
