--- a/Student_performance/Student_performance.ipynb
+++ b/Student_performance/Student_performance.ipynb
@@ -24,69 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "14fb3ffa-ddb4-4a60-94ce-11aba9554529",
+   "execution_count": null,
+   "id": "0d0e369c-65f2-448e-960b-829e508751ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   student_id  math    science  english  attendance\n",
-      "0        S001  78.0  82.000000     75.0          92\n",
-      "1        S002  85.0  88.000000     90.0          96\n",
-      "2        S003  62.0  70.000000     65.0          80\n",
-      "3        S004  90.0  92.000000     94.0          98\n",
-      "4        S005  55.0  60.000000     58.0          70\n",
-      "5        S006  88.0  85.000000     87.0          95\n",
-      "6        S007  72.0  75.000000     70.0          85\n",
-      "7        S008  95.0  94.000000     96.0          99\n",
-      "8        S009  67.0  65.000000     60.0          78\n",
-      "9        S010  80.0  82.000000     79.0          90\n",
-      "10       S011  74.0  76.000000     72.0          88\n",
-      "11       S012  91.0  89.000000     93.0          97\n",
-      "12       S013  59.0  63.000000     61.0          75\n",
-      "13       S014  83.0  85.000000     84.0          92\n",
-      "14       S015  69.0  68.000000     70.0          82\n",
-      "15       S016  87.0  90.000000     88.0          94\n",
-      "16       S017  76.0  78.000000     74.0          86\n",
-      "17       S018  92.0  95.000000     91.0          98\n",
-      "18       S019  64.0  66.000000     62.0          79\n",
-      "19       S020  81.0  83.000000     80.0          91\n",
-      "20       S021  77.5  72.000000     68.0          84\n",
-      "21       S022  77.0  78.958333     75.0          89\n",
-      "22       S023  85.0  88.000000     76.5          93\n",
-      "23       S024  60.0  58.000000     55.0          72\n",
-      "24       S025  90.0  91.000000     89.0          96\n",
-      "    student_id   math  science  english  attendance\n",
-      "0        False  False    False    False       False\n",
-      "1        False  False    False    False       False\n",
-      "2        False  False    False    False       False\n",
-      "3        False  False    False    False       False\n",
-      "4        False  False    False    False       False\n",
-      "5        False  False    False    False       False\n",
-      "6        False  False    False    False       False\n",
-      "7        False  False    False    False       False\n",
-      "8        False  False    False    False       False\n",
-      "9        False  False    False    False       False\n",
-      "10       False  False    False    False       False\n",
-      "11       False  False    False    False       False\n",
-      "12       False  False    False    False       False\n",
-      "13       False  False    False    False       False\n",
-      "14       False  False    False    False       False\n",
-      "15       False  False    False    False       False\n",
-      "16       False  False    False    False       False\n",
-      "17       False  False    False    False       False\n",
-      "18       False  False    False    False       False\n",
-      "19       False  False    False    False       False\n",
-      "20       False  False    False    False       False\n",
-      "21       False  False    False    False       False\n",
-      "22       False  False    False    False       False\n",
-      "23       False  False    False    False       False\n",
-      "24       False  False    False    False       False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# task two \n",
     "# finging  empty cells in columns\n",
@@ -104,11 +45,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "68bf8be1-0250-44d9-898c-c60969e1f5bf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   student_id  math    science  english  attendance     average\n",
+      "0        S001  78.0  82.000000     75.0          92  180.333333\n",
+      "1        S002  85.0  88.000000     90.0          96  204.333333\n",
+      "2        S003  62.0  70.000000     65.0          80  150.333333\n",
+      "3        S004  90.0  92.000000     94.0          98  214.666667\n",
+      "4        S005  55.0  60.000000     58.0          70  133.000000\n",
+      "5        S006  88.0  85.000000     87.0          95  203.333333\n",
+      "6        S007  72.0  75.000000     70.0          85  167.000000\n",
+      "7        S008  95.0  94.000000     96.0          99  222.333333\n",
+      "8        S009  67.0  65.000000     60.0          78  148.666667\n",
+      "9        S010  80.0  82.000000     79.0          90  186.333333\n",
+      "10       S011  74.0  76.000000     72.0          88  171.333333\n",
+      "11       S012  91.0  89.000000     93.0          97  213.666667\n",
+      "12       S013  59.0  63.000000     61.0          75  141.000000\n",
+      "13       S014  83.0  85.000000     84.0          92  195.333333\n",
+      "14       S015  69.0  68.000000     70.0          82  161.666667\n",
+      "15       S016  87.0  90.000000     88.0          94  205.000000\n",
+      "16       S017  76.0  78.000000     74.0          86  176.000000\n",
+      "17       S018  92.0  95.000000     91.0          98  214.666667\n",
+      "18       S019  64.0  66.000000     62.0          79  148.000000\n",
+      "19       S020  81.0  83.000000     80.0          91  188.666667\n",
+      "20       S021  77.5  72.000000     68.0          84  169.500000\n",
+      "21       S022  77.0  78.958333     75.0          89  178.319444\n",
+      "22       S023  85.0  88.000000     76.5          93  190.833333\n",
+      "23       S024  60.0  58.000000     55.0          72  134.333333\n",
+      "24       S025  90.0  91.000000     89.0          96  209.333333\n",
+      "   student_id  math    science  english  attendance     average  passed\n",
+      "0        S001  78.0  82.000000     75.0          92  180.333333    True\n",
+      "1        S002  85.0  88.000000     90.0          96  204.333333    True\n",
+      "2        S003  62.0  70.000000     65.0          80  150.333333    True\n",
+      "3        S004  90.0  92.000000     94.0          98  214.666667    True\n",
+      "4        S005  55.0  60.000000     58.0          70  133.000000    True\n",
+      "5        S006  88.0  85.000000     87.0          95  203.333333    True\n",
+      "6        S007  72.0  75.000000     70.0          85  167.000000    True\n",
+      "7        S008  95.0  94.000000     96.0          99  222.333333    True\n",
+      "8        S009  67.0  65.000000     60.0          78  148.666667    True\n",
+      "9        S010  80.0  82.000000     79.0          90  186.333333    True\n",
+      "10       S011  74.0  76.000000     72.0          88  171.333333    True\n",
+      "11       S012  91.0  89.000000     93.0          97  213.666667    True\n",
+      "12       S013  59.0  63.000000     61.0          75  141.000000    True\n",
+      "13       S014  83.0  85.000000     84.0          92  195.333333    True\n",
+      "14       S015  69.0  68.000000     70.0          82  161.666667    True\n",
+      "15       S016  87.0  90.000000     88.0          94  205.000000    True\n",
+      "16       S017  76.0  78.000000     74.0          86  176.000000    True\n",
+      "17       S018  92.0  95.000000     91.0          98  214.666667    True\n",
+      "18       S019  64.0  66.000000     62.0          79  148.000000    True\n",
+      "19       S020  81.0  83.000000     80.0          91  188.666667    True\n",
+      "20       S021  77.5  72.000000     68.0          84  169.500000    True\n",
+      "21       S022  77.0  78.958333     75.0          89  178.319444    True\n",
+      "22       S023  85.0  88.000000     76.5          93  190.833333    True\n",
+      "23       S024  60.0  58.000000     55.0          72  134.333333    True\n",
+      "24       S025  90.0  91.000000     89.0          96  209.333333    True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# task 3 adding average row and pass row\n",
+    "# average column\n",
+    "student_data['average'] = student_data['math'] + student_data['english'] + student_data['science'] /3\n",
+    "print(student_data)\n",
+    "# passed column\n",
+    "student_data['passed'] = student_data['average'] >= 60\n",
+    "print(student_data)"
+   ]
   },
   {
    "cell_type": "code",
