--- a/Student_performance/Student_performance.ipynb
+++ b/Student_performance/Student_performance.ipynb
@@ -74,7 +74,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b1dca0-145b-4482-b060-ec2957a6450f",
+   "id": "0f964396-efb5-4e67-ac4b-49276edcc2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grading student  according to existing data \n",
+    "import numpy as np\n",
+    "conditions = [\n",
+    "    student_data['average'] >= 80,\n",
+    "    student_data['average'] >= 70,\n",
+    "    student_data['average'] >= 60\n",
+    "]\n",
+    "choises = ['A','B','C']\n",
+    "student_data['grades'] = np.select(conditions , choises , default ='F')\n",
+    "print(student_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2891ec5-fec3-4c2d-bc0d-0c809cf56a60",
    "metadata": {},
    "outputs": [],
    "source": []
