--- a/Student_performance/Student_performance.ipynb
+++ b/Student_performance/Student_performance.ipynb
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f964396-efb5-4e67-ac4b-49276edcc2c1",
+   "id": "a0402f1a-2b78-4f61-a5b7-09a987d398fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2891ec5-fec3-4c2d-bc0d-0c809cf56a60",
+   "id": "3014b056-1063-4bc6-a19a-d510ea79f8e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eligibility for exams \n",
+    "student_data['exam_pass'] = student_data['passed'] & student_data['attendance_ok']\n",
+    "print(student_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b30ba26b-429e-433a-82e3-50d541ede879",
    "metadata": {},
    "outputs": [],
    "source": []
