matplotlib plot(func)

--- a/Student_performance/Student_performance.ipynb
+++ b/Student_performance/Student_performance.ipynb
@@ -104,8 +104,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "b30ba26b-429e-433a-82e3-50d541ede879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': [1, 2, 3], 'emails': ['abc', 'c@d.com', 'abc']}\n",
+      "0     True\n",
+      "1    False\n",
+      "2     True\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    \"id\" :[1,2,3],\n",
+    "    \"emails\" : [\"abc\",\"c@d.com\",\"abc\"]\n",
+    "}\n",
+    "print(data) \n",
+    "new_data = pd.DataFrame(data)\n",
+    "#print(new_data)\n",
+    "print(new_data.duplicated(subset = 'emails' ,keep = False))\n",
+    "#print(new_data.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "822ca493-d132-43fc-83ce-3a8accdd15d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58aea31e-efb6-4374-9ea9-7942df667ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2207e823-d50a-43c1-9eec-14948ba02326",
    "metadata": {},
    "outputs": [],
    "source": []
